fix control/controlled
